# wg-wizard

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  README.rst  cspell.json  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: docker.yml  main.yml  release.yml
src/wg_wizard/: __init__.py  cli.py  core.py  paths.py  utils.py  wg.py  wg_quick.py
tests/: conftest.py  test_cli.py  test_core.py
tests/data/default_with_one_client/: wg0.yml  wg0_secret.json
tests/data/default_with_one_client/expected_wg_quick_config/: wg0_None  wg0_client_0
